fix: set the z-index as 3 for controls buttons

--- a/assets/hb/modules/carousel/scss/index.scss
+++ b/assets/hb/modules/carousel/scss/index.scss
@@ -48,6 +48,7 @@
         bottom: 1.25rem;
         position: absolute;
         right: 1.25rem;
+        z-index: 3;
 
         .carousel-control {
             text-decoration: none;
